sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:7: error: not found: value getvaleur
    v = getvaleur(i)
        ^AlgInsertionSort:8: error: not found: value j
    j = i
    ^AlgInsertionSort:9: error: not found: value j
    while ( v > getValeur(j-1)){
                          ^AlgInsertionSort:10: error: not found: value j
      setValeur(j, getValeur(j-1))
                ^AlgInsertionSort:10: error: not found: value j
      setValeur(j, getValeur(j-1))
                             ^AlgInsertionSort:11: error: not found: value j
      j = j - 1
      ^AlgInsertionSort:13: error: not found: value j
    setValeur(j,v)
              ^