sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var n: Int = getNombreValeurs()
  var v: Int = 0
  
  for (i <- 1 to n-1){
    v = getvaleur(i)
    j = i
    while ( v > getValeur(j-1)){
      setValeur(j, getValeur(j-1))
      j = j - 1
    }
    setValeur(j,v)
  }
}